syntax = "proto3";

package dhpcs.liquidity.actor.protocol.clientconnection;

option java_package = "com.dhpcs.liquidity.proto.actor.protocol.clientconnection";

import "dhpcs/liquidity/ws-protocol.proto";

message ZoneResponseEnvelope {
    string zone_validator = 1;
    int64 correlation_id = 2;
    dhpcs.liquidity.ws.protocol.ZoneResponse response = 3;
}

message ZoneNotificationEnvelope {
    string zone_validator = 1;
    string zone_id = 2;
    int64 sequence_number = 3;
    dhpcs.liquidity.ws.protocol.ZoneNotification notification = 4;
}
